force-app/main/default/objects/Static_User__mdt/Static_User__mdt.object-meta.xml
<CustomObject>
    <label>Static User</label>
    <pluralLabel>Static Users</pluralLabel>
</CustomObject>