force-app/main/default/objects/Static_User__mdt/fields/Is_Data_Loader__c.field-meta.xml
<CustomField>
    <fullName>Is_Data_Loader__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked, if the user is a data loader user</description>
    <inlineHelpText>Checked, if the user is a data loader user</inlineHelpText>
    <label>Is Data Loader</label>
    <type>Checkbox</type>
</CustomField>