force-app/main/default/objects/Static_User__mdt/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <description>The 18 character GUID for the user</description>
    <inlineHelpText>The 18 character GUID for the use</inlineHelpText>
    <label>User Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>