force-app/main/default/objects/Static_User__mdt/fields/User_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Type__c</fullName>
    <description>Type of User. "Data Loader", "Release User", "Leena"</description>
    <inlineHelpText>Type of User. "Data Loader", "Release User", "Leena"</inlineHelpText>
    <label>User Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>